--- a/index.html
+++ b/index.html
@@ -12,14 +12,105 @@
     <title>Bootstrap 5 Simple Starter</title>
   </head>
   <body>
-    <div
-      class="container d-flex flex-column align-items-center justify-content-center text-center vh-100 w-50"
-    >
-      <h1 class="primary">
-        <i class="fa fa-star"></i> Bootstrap 5 Simple Starter
-      </h1>
-      <button class="btn btn-primary">Button</button>
-    </div>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
+      <div class="container">
+        <a href="index.html" class="navbar-brand">
+          <img src="images/logo.png" alt="" width="225" />
+        </a>
+        <button
+          class="navbar-toggler border"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavDropdown"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="#navbarNavDropdown">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a href="index.html" class="nav-link fw-semibold">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="#details" class="nav-link fw-semibold">Details</a>
+            </li>
+            <li class="nav-item">
+              <a
+                href="contact.html"
+                class="nav-link btn btn-outline-light fw-semibold px-4 mx-4"
+                >Contact</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- Header -->
+    <header class="header">
+      <!-- Hero -->
+      <div class="hero text-white pt-7">
+        <div class="container-xl">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="image-container mb-5 px-4">
+                <img src="images/header-ebook.png" class="img-fluid" alt="" />
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div
+                class="text-container p-4 d-flex flex-column justify-content-center h-100 mb-5"
+              >
+                <h1 class="display-3 fw-bold">Welcome to Blog Mastery</h1>
+                <p class="lead">
+                  Are you ready to take your blogging journey to new heights?
+                  Blog Mastery is your ultimate guide to creating and managing a
+                  successful blog that captivatesyour audience and drives
+                  engagement.
+                </p>
+                <!-- Form -->
+                <div class="form-container text-center">
+                  <form>
+                    <div class="my-4">
+                      <input
+                        type="email"
+                        class="form-control form-control-lg rounded-5"
+                        placeholder="Email Address"
+                      />
+                    </div>
+                    <div class="d-grid">
+                      <button class="btn btn-primary btn-lg text-white">
+                        Free Download
+                      </button>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <svg
+        class="frame-decoration"
+        data-name="Layer 2"
+        xmlns="http://www.w3.org/2000/svg"
+        preserveAspectRatio="none"
+        viewBox="0 0 1920 192.275"
+      >
+        <defs>
+          <style>
+            .cls-1 {
+              fill: #f3f6f9;
+            }
+          </style>
+        </defs>
+        <title>frame-decoration</title>
+        <path
+          class="cls-1"
+          d="M0,158.755s63.9,52.163,179.472,50.736c121.494-1.5,185.839-49.738,305.984-49.733,109.21,0,181.491,51.733,300.537,50.233,123.941-1.562,225.214-50.126,390.43-50.374,123.821-.185,353.982,58.374,458.976,56.373,217.907-4.153,284.6-57.236,284.6-57.236V351.03H0V158.755Z"
+          transform="translate(0 -158.755)"
+        />
+      </svg>
+    </header>
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
